@@ -2,8 +2,9 @@
 
 VERSION = '1.0.1'
 
-puts "# Created with ZenTest v. #{VERSION}"
+puts "# Code Generated by ZenTest v. #{VERSION}"
 
+$TESTING = true
 $AUTOTESTER = true
 
 # this is really frustrating... testrunner has an at_exit handler
@@ -28,11 +29,12 @@ end
 
 files = ARGV.clone
 
+error_count = 0
 test_klasses = {}
 klasses = {}
 all_methods = {} # fallback
 
-puts "# run against: #{ARGV.join(', ')}"
+puts "# run against: #{ARGV.join(', ')}" if $DEBUG
 ARGV.each do |file|
 
   is_loaded = false
@@ -40,8 +42,10 @@ ARGV.each do |file|
     if line =~ /^\s*class\s+(\S+)/ then
       klassname = $1
 
+      next if line =~ /\#\s*ZenTest SKIP/ 
+
       unless is_loaded then
-	puts "# loading #{file}"
+	puts "# loading #{file}" if $DEBUG
 	begin
 	  require "#{file}"
 	rescue LoadError => err
@@ -73,16 +77,6 @@ ARGV.each do |file|
   end
 end
 
-puts "#"
-all_methods.each_key { |key|
-  puts "# #{key}:"
-  methods = all_methods[key]
-  methods.each_key { |meth|
-    puts "#     #{meth}"
-  }
-}
-puts "#"
-
 missing_methods = {} # key = klassname, val = array of methods
 
 klasses.each_key do |klassname|
@@ -97,7 +91,8 @@ klasses.each_key do |klassname|
       testmethodname = "test_#{methodname}".gsub(/\[\]=/, "index_equals").gsub(/\[\]/, "index")
       unless testmethods[testmethodname] then
 	unless testmethods.keys.find { |m| m =~ /#{testmethodname}(_\w+)+$/ } then
-	  puts "# ERROR method #{testklassname}\##{testmethodname} does not exist (1)" if $VERBOSE
+	  puts "# ERROR method #{testklassname}\##{testmethodname} does not exist (1)" if $DEBUG
+	  error_count += 1
 	  missing_methods[testklassname] ||= []
 	  missing_methods[testklassname].push(testmethodname)
 	end
@@ -126,20 +121,21 @@ klasses.each_key do |klassname|
 	end
 
 	unless found or methods[methodname] or methodname == "initialize" then
-	  puts "# ERROR method #{klassname}\##{orig_name} does not exist (2)" if $VERBOSE
-	  print "# "; p methods
+	  puts "# ERROR method #{klassname}\##{orig_name} does not exist (2)" if $DEBUG
+	  error_count += 1
 	  missing_methods[klassname] ||= []
 	  missing_methods[klassname].push(orig_name)
 	end
 
       else
 	unless testmethodname =~ /^util_/ then
-	  puts "# WARNING Skipping #{testklassname}\##{testmethodname}"
+	  puts "# WARNING Skipping #{testklassname}\##{testmethodname}" if $DEBUG
 	end
       end
     end
   else
-    puts "# ERROR test class #{testklassname} does not exist" if $VERBOSE
+    puts "# ERROR test class #{testklassname} does not exist" if $DEBUG
+    error_count += 1
 
     missing_methods[testklassname] ||= []
     klasses[klassname].keys.each do |meth|
@@ -170,3 +166,5 @@ missing_methods.keys.sort.each do |klass|
   puts "end"
   puts ""
 end
+
+puts "# Number of errors detected: #{error_count}"
